Update ReservationLookupServlet.java
remove the public static List<Map<String, Object>> executeQueryWithParams(String query, List<Object> parameters) throws SQLException, ClassNotFoundException {
    // Method implementation
}